@@ -8,8 +8,8 @@
 [para]
 
 This manpage describes a processor / converter for manpages in the
-doctools format as specified in [cmd dtformat]. The processor is based
-upon the package [package doctools].
+doctools format as specified in [cmd doctools_fmt]. The processor
+is based upon the package [package doctools].
 
 [list_begin definitions]
 [call [cmd mpexpand] [opt "-module [arg module]"] [arg format] [arg infile]|- [arg outfile]|-]
